--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   ],
   "dependencies": {
     "@raycast/api": "^1.38.1",
+    "@raycast/utils": "^1.0.6",
     "node-fetch": "^3.2.9",
     "tablemark": "^3.0.0"
   },
