--- a/package.json
+++ b/package.json
@@ -6,42 +6,48 @@
   "icon": "dbt-icon.png",
   "author": "b-per",
   "license": "MIT",
+  "preferences": [
+    {
+      "name": "dbtCloudAdminAPIKey",
+      "title": "dbt Cloud Admin API Key",
+      "description": "dbt Cloud Admin API Key",
+      "type": "password",
+      "required": true
+    },
+    {
+      "name": "dbtCloudMetadataAPIKey",
+      "title": "dbt Cloud Metadata API Key",
+      "description": "dbt Cloud Metadata API Key",
+      "type": "password",
+      "required": true
+    },
+    {
+      "name": "dbtCloudAccountID",
+      "title": "dbt Cloud Account ID",
+      "description": "Account ID of you dbt Cloud account",
+      "type": "textfield",
+      "required": true
+    },
+    {
+      "name": "dbtCloudProjectID",
+      "title": "dbt Cloud Project ID",
+      "description": "Project ID of your dbt Cloud project",
+      "type": "textfield",
+      "required": true
+    }
+  ],
   "commands": [
     {
       "name": "index",
-      "title": "Show Models Details",
+      "title": "Show Models Details - Favorite Project",
       "description": "Template for showing a static list and a detail view",
-      "mode": "view",
-      "preferences": [
-        {
-          "name": "dbtCloudAdminAPIKey",
-          "title": "dbt Cloud Admin API Key",
-          "description": "dbt Cloud Admin API Key",
-          "type": "password",
-          "required": true
-        },
-        {
-          "name": "dbtCloudMetadataAPIKey",
-          "title": "dbt Cloud Metadata API Key",
-          "description": "dbt Cloud Metadata API Key",
-          "type": "password",
-          "required": true
-        },
-        {
-          "name": "dbtCloudAccountID",
-          "title": "dbt Cloud Account ID",
-          "description": "Account ID of you dbt Cloud account",
-          "type": "textfield",
-          "required": true
-        },
-        {
-          "name": "dbtCloudProjectID",
-          "title": "dbt Cloud Project ID",
-          "description": "Project ID of your dbt Cloud project",
-          "type": "textfield",
-          "required": true
-        }
-      ]
+      "mode": "view"
+    },
+    {
+      "name": "index2",
+      "title": "Show Models Details - All Projects",
+      "description": "Template for showing a static list and a detail view",
+      "mode": "view"
     }
   ],
   "dependencies": {
